# Model_M1

./: .gitignore  EXPLORE_API.md  README.md  SPEC.md  api_report.md  explore_api.py  pyproject.toml  settings.py
data/: ndx_members.json  schema.sql
scripts/: backfill.py  compute_history.py  run_daily.py  train.py
src/: compute.py  model.py  monitor.py  output.py  pull.py  screen.py
tests/: test_compute.py  test_model.py  test_output.py  test_pull.py
