[project]
name = "ndx-watchlist"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "polygon-api-client>=1.14.0",
    "yfinance>=0.2.40",
    "fredapi>=0.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckdb>=0.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "py_vollib>=1.0.1",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "shap>=0.45.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "exchange_calendars>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
